--- a/e_commerce_project/templates/base.html
+++ b/e_commerce_project/templates/base.html
@@ -53,9 +53,11 @@
         <ul>
           <li><a class="nav-link scrollto active" href="/">Home</a></li>
           
-          <li><a class="nav-link scrollto" href="/orders">Orders</a></li>
-          <li><a class="nav-link scrollto" href="/about">Cart</a></li>
+          <li><a class="nav-link scrollto" href="/checkout">Checkout</a></li>
+          
           <li><a class="nav-link scrollto" href="/profile">Profile</a></li>
+          <button type="button" class="nav-link scrollto bg-danger p-3 m-2 text-white" id="popcart" data-container="body" data-toggle="popover" data-placement="bottom" data-html="true" ><i class="fa-solid fa-cart-shopping"></i>  Cart (<span id="cart">0</span>)
+          </button>
           
           {% if request.user.is_authenticated %}
           <li><a href="/auth/logout">Logout</a></li>
